# PlayFlicks

./: .gitignore  README.md  docker-compose.yml
android-app/: DockerFile
android-app/app/: build.gradle.kts  key-store.jks
android-app/app/src/main/: AndroidManifest.xml
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
api/: .gitignore  api.DockerFile  app.js  package-lock.json  package.json  t.http
api/controllers/: category.js  movies.js  recommend.js  token.js  user.js
api/models/: category.js  movie.js  user.js
api/routes/: api.js  categories.js  movies.js  tokens.js  user.js
api/services/: category.js  movie.js  recommend.js  user.js
react-app/: DockerFile  package-lock.json  package.json
react-app/public/: index.html  manifest.json
react-app/src/: App.js  index.css
react-app/src/components/: AdminRoute.jsx  PrivateRoute.jsx
react-app/src/dev/: previews.jsx
react-app/src/model/: Authenticate.js
react-app/src/styles/: admin.module.css  darkMode.css  home.module.css  login.module.css  movieDetails.module.css  register.module.css  unsigned.module.css  watch.module.css
react-app/src/view/: Admin.jsx  Home.jsx  Login.jsx  MovieDetails.jsx  Register.jsx  Unsigned.jsx  Watch.jsx
react-app/src/viewmodel/: Authenticate.js
recommend-server/: CMakeLists.txt  Dockerfile.RecommendServer  Dockerfile.client  Dockerfile.tests
recommend-server/src/Controller/: ClientData.cpp  ClientData.h  ThreadPool.cpp  ThreadPool.h
recommend-server/src/Model/: Add.cpp  Add.h  App.cpp  App.h  DELETE.cpp  DELETE.h  GET.cpp  GET.h  Help.cpp  Help.h  ICommandAction.h  ICommandInput.h  ICommandOutput.h  ICommandRemove.h  InputCLI.cpp  InputCLI.h  InputFile.cpp  InputFile.h  OutputCLI.cpp  OutputCLI.h  OutputFile.cpp  OutputFile.h  PATCH.cpp  PATCH.h  POST.cpp  POST.h  Recommend.cpp  Recommend.h  RemoveLineFile.cpp  RemoveLineFile.h  Server.cpp  Server.h  User.cpp  User.h  UserDataHandler.cpp  UserDataHandler.h
recommend-server/src/Tests/: AddTests.cpp  ClientDataTest.cpp  DELETETest.cpp  GETTest.cpp  HelpTest.cpp  InputCLITests.cpp  InputFileTest.cpp  OutputCLITests.cpp  OutputFileTest.cpp  PATCHTest.cpp  POSTTest.cpp  RecommendTest.cpp  ServerTests.cpp  UserDataHandlerTest.cpp  UserTest.cpp
recommend-server/src/Tests/ServerTestFiles/: client1.py  client2.py  client4.py  input1.txt  input2.txt  input3.txt  input4.txt
recommend-server/src/View/: client.py
recommend-server/src/data/: user_data.txt
wiki/: android.md  api.md  install.md  reactApp.md
(+112 files in other folders)
